--- a/learn/深拷贝浅拷贝.md
+++ b/learn/深拷贝浅拷贝.md
@@ -2,13 +2,39 @@
 
 ## 深拷贝和浅拷贝
 
-浅拷贝就是对引用的拷贝(只拷贝父对象)
+浅拷贝就是对引用的拷贝(只拷贝父对象)<br />
 深拷贝是对对象资源的拷贝
 
 ### 使用时需要引入  copy 模块
 
-  
+浅拷贝
+> a = [1,2,3,'a','b','c']
+> b = a
+>c = copy.copy(a)
+>id(a)
+>4442892336
+> id(b)
+>4442892336
+> id(c)
+>4443056392
+> a[3].append('4')
+>a
+>[3, 2, 3, ['a', 'b', 'c', '4'], 'd']
+> c
+>[1, 2, 3, ['a', 'b', 'c', '4']]
 
+在操作数组a中的可变元素时,c中对应的元素也会跟着变化,证明c中的元素引用和a中还是同一份引用
 
+深拷贝
+>d = copy.deepcopy(a)
+>a[3].append('f')
+>a
+>[3, 2, 3, ['a', 'b', 'c', '4', 'f'], 'd']
+> d
+>[3, 2, 3, ['a', 'b', 'c', '4'], 'd']
+> id(a[3])
+>4443054736
+> id(d[3])
+>4443056032
 
-
+d是a的深拷贝,在a在中的可变元素发生变化时,d中对应的元素并没有发生变化,且内存地址也不同.
