--- a/learn/文件.md
+++ b/learn/文件.md
@@ -47,11 +47,8 @@ python进行文件读写的函数是open或file<br />
 >chdir  //切换当前目录<br />
 >getcwd //获取当前路径<br />
 
-### 目录遍历
-
->walk  <br />
-
-
+### 思考:
+遍历某个文件夹下所有的目录以及目录和文件,并保存其绝对路径<br />
 
 
 
